--- a/style.css
+++ b/style.css
@@ -79,25 +79,8 @@
      transform: scale(1.05);
    }
 
-   /* text responsiveness */
+   /* image responsiveness */
    @media (max-width: 1200px) {
-
-     .text,
-     tr {
-       font-size: 1.1rem !important;
-     }
-
-     h2 {
-       font-size: 1.5rem;
-     }
-
-     .card-text {
-       font-size: 0.9rem !important;
-     }
-
-     .card-title {
-       font-size: 1.1rem !important;
-     }
 
      /* carousel image */
      .carousel-img {
@@ -112,24 +95,6 @@
 
 
    @media (max-width: 768px) {
-
-     .text,
-     .nav-item,
-     tr {
-       font-size: 0.9rem !important;
-     }
-
-     h2 {
-       font-size: 1.2rem;
-     }
-
-     .card-text {
-       font-size: 0.8rem !important;
-     }
-
-     .card-title {
-       font-size: 1rem !important;
-     }
 
      #specifications .card img {
        width: 60px;
